fix: fixed problem with z-index

--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -1,4 +1,5 @@
 aside {
+    z-index: 1;
     flex: 1 0 auto;
     @include column;
     form {
